--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,16 @@ button{
 body{
     background-color:#c7c7c7;
 }
+.fixed_header{
+    position: fixed;
+    background-color: white;
+    top:0;
+    left:0;
+    right:0;
+    
+
+
+}
 .header {
     font-size: 0;
     margin: 40px 20px 0 20px;
@@ -61,6 +71,7 @@ body{
         width: 15%;
         text-align: left;
         font-size: 14px;
+        
     }
     .actions a{
         color: #67b54b;
@@ -75,4 +86,41 @@ body{
         border: 4;
         border-color: black;
         border-radius: 5px;
+        
       }
+      .promo{
+        display: flex;
+        width: 70%;
+        margin: 100px auto;
+        align-items: center;
+        justify-content: space-between 10px;
+
+      }
+      .publish {
+        /* container styles if any */
+      }
+      
+      .publish h3 {
+        font-family: "Alegreya", serif;
+        font-size: 40px;
+        line-height: 48px;
+        color: #025157;
+      }
+      
+      .publish > p {
+        font-size: 16px;
+        color: #343434;
+        line-height: 1.5;
+        margin-bottom: 20px;
+      }
+      
+      /*.publish > form {
+        display: flex;
+        
+      }*/
+      
+      .publish > form p {
+        color: #025157;
+        margin-right: 18px;
+      }
+      
