--- a/styles.css
+++ b/styles.css
@@ -1,126 +1,176 @@
+body {
+  background-color: #f49e47;
+  background-image: url('https://pro2-bar-s3-cdn-cf.myportfolio.com/67cf45ca-338d-4fd0-943b-32d96162976a/b7b52d14-b827-4c3a-906f-3b94fa13f35f_rw_1920.png');
+}
+
 h1 {
-    color: blue;
-
-}
-h2 {
-    color: #3f5e9c;
-
-}
-p{
-    color: #ff2828cc;
+  color: #46484c;
+  text-align: center;
 }
 
-button{
-    color: red;
-    background-color: royalblue;
+p {
+  color: #8b8b8bcc;
+  font-family: verdana;
+  font-size: 20px;
 }
-body{
-    background-color:#c7c7c7;
-}
-.fixed_header{
-    position: fixed;
-    background-color: white;
-    top:0;
-    left:0;
-    right:0;
-    
 
-
+button {
+  color: #fff;
+  background-color: #025157;
 }
+
+.fixed-header {
+  position: fixed;
+  background-color: white;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
 .header {
-    font-size: 0;
-    margin: 40px 20px 0 20px;
-    font-family: sans-serif;
-    height: 45px;
-    /*margin-top: 40px;
-    margin-left: 20px;
-    margin-right: 20px;*/
+  margin-top: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-size: 0;
+  height: 45px;
+  font-family: sans-serif;
+}
+
+.header > * {
+  display: inline-block;
+  font-size: 16px;
+  vertical-align: middle;
+  height: 100%;
+  line-height: 45px;
+}
+
+li {
+  display: inline;
+}
+
+.logo {
+  width: 15%;
+}
+
+.logo > img {
+  height: 100%;
+}
+
+.navbar {
+  width: 70%;
+  text-align: center;
+  color: #025157;
+}
+
+.menu-item {
+  display: inline;
+  margin-right: 25px;
+  margin-left: 25px;
+}
+
+.actions {
+  width: 15%;
+  text-align: right;
+  font-size: 14px;
+}
+
+.actions > * {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.actions a {
+  color: #67b54b;
+}
+
+.actions button {
+  color: white;
+  background-color: #67b54b;
+  padding-left: 14px;
+  padding-right: 14px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border: 0;
+  border-radius: 5px;
+}
+
+.promo {
+  display: flex;
+  width: 70%;
+  margin: 100px auto;
+  align-items: center;
+}
+
+.explanatory-video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.explanatory-video img {
+  width: 120px;
+  margin-top: 10px;
+}
+
+.publish {
+  /* container styles if any */
+  margin-left: 20px;
+}
+
+.publish h3 {
+  font-family: "Alegreya", serif;
+  font-size: 40px;
+  line-height: 48px;
+  color: #025157;
+}
+
+.publish > p {
+  font-size: 16px;
+  color: #343434;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.publish > form {
+  display: flex;
+}
+
+.publish > form p {
+  color: #025157;
+  margin-right: 18px;
+}
+.containerSection{
+  display: flex;
+  background-color:#a1d683;
+}
+.articleText{
+  display: flex;
+  flex-direction: column;
+
+}
+
+.articleText > h1{
+  
+  text-align: center;
+  font-family: abr;
+  color:rgb(0, 60, 255);
   
 
-  }
-
-  li {
-    display: inline;
-    align-items: center;
-  }
-
-  .header > *{
-      display: inline-block;
-      font-size: 16px;
-      vertical-align: middle;
-      height: 100%;
-      line-height: 45px;
-  }
-  .logo {
-      width: 15%;
-    }
-    .navbar {
-        width: 70%;
-        text-align: center;
-        font-weight: 600;
-        
-        
-        
-    }
-    
-    li {
-        margin-left: 25px;
-        margin-right: 25px;
-    }
-    .actions {
-        width: 15%;
-        text-align: left;
-        font-size: 14px;
-        
-    }
-    .actions a{
-        color: #67b54b;
-    }
-    .actions button {
-        color: white;
-        background-color: #67b54b;
-        padding-left: 14px;
-        padding-right: 14px;
-        padding-top: 12px;
-        padding-bottom: 12px;
-        border: 4;
-        border-color: black;
-        border-radius: 5px;
-        
-      }
-      .promo{
-        display: flex;
-        width: 70%;
-        margin: 100px auto;
-        align-items: center;
-        justify-content: space-between 10px;
-
-      }
-      .publish {
-        /* container styles if any */
-      }
-      
-      .publish h3 {
-        font-family: "Alegreya", serif;
-        font-size: 40px;
-        line-height: 48px;
-        color: #025157;
-      }
-      
-      .publish > p {
-        font-size: 16px;
-        color: #343434;
-        line-height: 1.5;
-        margin-bottom: 20px;
-      }
-      
-      /*.publish > form {
-        display: flex;
-        
-      }*/
-      
-      .publish > form p {
-        color: #025157;
-        margin-right: 18px;
-      }
-      
+}
+.features{
+  display: grid;
+  background-color: #025157;  
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 330px);
+  padding: 10px 20px; 
+  margin: 0%;
+  
+}
+.feature-art {
+  background-color: lightcyan;
+  margin: 10px;
+  width: 40%;
+  height: 50px;
+  justify-self: center;
+  
+}
